fix: test removed form style

--- a/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
+++ b/blocks/form/components/advanceddatepicker/advanceddatepicker.scss
@@ -1,20 +1,19 @@
-@use '../../../../styles/settings' as *;
+// @use '../../../../styles/settings' as *;
 
+// fieldset.advanceddatepicker {
+//     display: flex;
 
-fieldset.advanceddatepicker {
-    display: flex;
+//     >legend {
+//         @include font-body-large;
+//     }
 
-    >legend {
-        @include font-body-large;
-    }
+//     &[data-required=true]>legend::after {
+//         content: "*";
+//         color: var(--form-error-color);
+//         padding-inline-start: 0.3125rem;
+//     }
 
-    &[data-required=true]>legend::after {
-        content: "*";
-        color: var(--form-error-color);
-        padding-inline-start: 0.3125rem;
-    }
-
-    >.drop-down-wrapper {
-        flex: 1;
-    }
-}
+//     >.drop-down-wrapper {
+//         flex: 1;
+//     }
+// }
