--- a/styles/forms/_select.scss
+++ b/styles/forms/_select.scss
@@ -1,104 +1,104 @@
-@use '../settings' as *;
+// @use '../settings' as *;
 
-@mixin select-chevron {
-  content: '';
-  position: absolute;
-  top: 55%;
-  right: $spacing-400;
-  width: $spacing-500;
-  height: $spacing-500;
-  background-image: url('/icons/icon-chevron-down.svg');
-  background-repeat: no-repeat;
-  background-size: contain;
-  pointer-events: none;
-}
+// @mixin select-chevron {
+//   content: '';
+//   position: absolute;
+//   top: 55%;
+//   right: $spacing-400;
+//   width: $spacing-500;
+//   height: $spacing-500;
+//   background-image: url('/icons/icon-chevron-down.svg');
+//   background-repeat: no-repeat;
+//   background-size: contain;
+//   pointer-events: none;
+// }
 
-.field-completion-status .radio-wrapper label .text {
-  font-size: $size-font-body-large;
-  font-weight: 400;
-}
+// .field-completion-status .radio-wrapper label .text {
+//   font-size: $size-font-body-large;
+//   font-weight: 400;
+// }
 
-@mixin base-select-style {
-  cursor: pointer;
-  border-radius: $border-radius-mid;
-  border: 2px solid $stroke-tertiary;
-  padding: $spacing-400;
-  font-family: $font-family;
-  font-size: $size-font-body-large;
-  line-height: 133%;
-  appearance: none;
-  width: 100%;
-  height: $spacing-800;
-  background-color: $color-white;
-  color: $text-secondary;
+// @mixin base-select-style {
+//   cursor: pointer;
+//   border-radius: $border-radius-mid;
+//   border: 2px solid $stroke-tertiary;
+//   padding: $spacing-400;
+//   font-family: $font-family;
+//   font-size: $size-font-body-large;
+//   line-height: 133%;
+//   appearance: none;
+//   width: 100%;
+//   height: $spacing-800;
+//   background-color: $color-white;
+//   color: $text-secondary;
 
-  &:focus-visible,
-  &:focus,
-  &:active,
-  &:hover {
-    border-color: $stroke-accent;
-    outline: none;
-  }
+//   &:focus-visible,
+//   &:focus,
+//   &:active,
+//   &:hover {
+//     border-color: $stroke-accent;
+//     outline: none;
+//   }
 
-  option {
-    cursor: pointer;
-    padding: $spacing-200;
-    color: $text-secondary;
+//   option {
+//     cursor: pointer;
+//     padding: $spacing-200;
+//     color: $text-secondary;
 
-    &:hover {
-      color: $text-primary;
-      background-color: $color-shade-blue-10;
-      border-radius: $border-radius-low;
-    }
+//     &:hover {
+//       color: $text-primary;
+//       background-color: $color-shade-blue-10;
+//       border-radius: $border-radius-low;
+//     }
 
-    &:focus,
-    &:focus-visible {
-      @extend %state-focus;
-      border-radius: $border-radius-low;
-    }
+//     &:focus,
+//     &:focus-visible {
+//       @extend %state-focus;
+//       border-radius: $border-radius-low;
+//     }
 
-    &[selected] {
-      background-color: $color-white;
-      color: $text-accent;
-    }
-  }
-}
+//     &[selected] {
+//       background-color: $color-white;
+//       color: $text-accent;
+//     }
+//   }
+// }
 
-.drop-down-wrapper {
-  position: relative;
-  display: inline-block;
-  width: 100%;
+// .drop-down-wrapper {
+//   position: relative;
+//   display: inline-block;
+//   width: 100%;
 
-  label {
-    @extend %label-common-style;
-  }
+//   label {
+//     @extend %label-common-style;
+//   }
 
-  select {
-    @include base-select-style;
-    position: relative;
-  }
+//   select {
+//     @include base-select-style;
+//     position: relative;
+//   }
 
-  &::after {
-    @include select-chevron;
-  }
-}
+//   &::after {
+//     @include select-chevron;
+//   }
+// }
 
-select[required] {
-  @include base-select-style;
-  position: relative;
-}
+// select[required] {
+//   @include base-select-style;
+//   position: relative;
+// }
 
-select[required]::after {
-  @include select-chevron;
-}
+// select[required]::after {
+//   @include select-chevron;
+// }
 
-.field-advanceddatepicker,
-.field-when-finish {
-  display: flex;
-  flex-wrap: wrap;
-  gap: $spacing-400;
+// .field-advanceddatepicker,
+// .field-when-finish {
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: $spacing-400;
 
-  .drop-down-wrapper {
-    flex: 1 1 0%;
-  }
-}
+//   .drop-down-wrapper {
+//     flex: 1 1 0%;
+//   }
+// }
